# MedReportAI

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  evaluation.py  iterations.ipynb  langgraph.json  prompts.py  pyproject.toml  report_history.json  retrieval.py  signatures.py  source_formatter.py  states.py  streamlit_app.py
.github/workflows/: tests.yml
.streamlit/: config.toml
RAGEvaluation/: generated_testset.csv
agents/: planner.py
core/: __init__.py  nodes.py  quality.py  schemas.py  signatures.py  states.py  tool_node.py  verification.py
data/: gaza_war_impact_children.csv  tests.csv
outputs/scratchpads/: scratchpad_20251013_133953.md  scratchpad_20251013_135739.md  scratchpad_bariatric_surgery_outcomes_for_20260311_230552.md  scratchpad_direct_&_indirect_comparison:__20260311_230552.md  scratchpad_efficacy_of_glp-1_receptor_ago_20260311_230552.md  scratchpad_safety,_tolerability,_and_prac_20260311_230552.md
prompts/: __init__.py  planner.py  scraper.py  section_writer.py
rag/: chain.py  embeddings.py  retrieval_builder.py  retrieval_formatter.py
scratchpads/: scratchpad_20251011_123543.md
scripts/: pubmed_scraper.py
storage/RAGEvaluation/: evaluation_results_deepseek-chat_fastembed.csv  results_deepseek_fastembed.csv
storage/faiss_index/: index.faiss  index.pkl
tests/: agents_planner_test.py  app_test.py  core_nodes_test.py  core_tool_node_test.py  data_processing_test.py  formatting_test.py  helpers_test.py  prompt_contract_test.py  quality_test.py  rag_chain_test.py  retrieval_builder_test.py  retrieval_formatter_test.py  scratchpad_helpers_test.py  source_formatter_test.py  tools_pubmed_search_test.py  tools_query_generator_test.py  tools_retrieval_test.py  tools_scratchpad_test.py  tools_web_search_test.py  verification_test.py
tools/: pubmed_search.py  query_generator.py  retrieval.py  scratchpad.py  web_search.py
ui/: exports.py  history.py  pipeline.py  sidebar.py  styles.css  styles.py
utils/: data_processing.py  dspy_bootstrap.py  formatting.py  helpers.py  scratchpad_helpers.py
