[project]
name = "research"
version = "0.1.0"
description = "PubMed research tools"
requires-python = ">=3.11"
dependencies = [
    "dspy==3.1.3",
    "fastembed==0.7.4",
    "ipython==8.12.3",
    "langchain==1.2.12",
    "langchain-classic==1.0.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.19",
    "langchain-deepseek==1.0.1",
    "langchain-experimental==0.4.1",
    "langchain-tavily==0.2.17",
    "langgraph==1.1.2",
    "langsmith==0.7.17",
    "loguru==0.7.3",
    "markdown==3.10.2",
    "nest-asyncio==1.6.0",
    "numpy==2.4.3",
    "pandas<3",
    "pandas-stubs==2.3.0.250703",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pymed==0.8.9",
    "pytest>=9.0.2",
    "python-dotenv==1.2.2",
    "ragas==0.4.3",
    "rich==14.3.3",
    "streamlit==1.55.0",
    "typing-extensions==4.15.0",
    "weasyprint==68.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=5.13.0",
    "autoflake>=2.0.0",
    "mypy>=1.8.0",
    "nbqa>=1.8.0",
    "ruff>=0.6.0",
]

# Black
[tool.black]
line-length = 88
target-version = ['py312']

# isort
[tool.isort]
profile = "black"

# autoflake
[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F841", "F704", "I"]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "evaluation.py",
    "scripts/*",
    "streamlit_app.py",
    "t.py",
]

[tool.coverage.report]
omit = [
    "tests/*",
    "evaluation.py",
    "scripts/*",
    "streamlit_app.py",
    "t.py",
]
fail_under = 80
